chore(docker): add stream-receiver container

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,4 +10,8 @@ services:
     build:
       context: .
       dockerfile: dev.Dockerfile
-   
+
+  stream-receiver:
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
