--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "python-socketio>=5.7.2",
     "redis>=4.3.4",
     "rq>=1.11.1",
+    "aiortc>=1.3.2",
+    "numpy>=1.21.1",
+    "aiohttp>=3.8.3",
 ]
 requires-python = ">=3.7"
 license = {text = "MIT"}
