--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,15 @@
 fastapi==0.85.1
 uvicorn==0.19.0
 
-# webrtc signaling
+# webrtc
 websockets==10.3
 python-socketio==5.7.2
+aiortc==1.3.2
+aiohttp==3.8.3
 
 # task queue
 redis==4.3.4
 rq==1.11.1
+
+# others
+numpy==1.21.1
