--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+    restart: always
     networks:
       - dbnet
     ports:
@@ -24,6 +25,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: always
     networks:
       - dbnet
     depends_on:
@@ -34,6 +36,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: always
     networks:
       - dbnet
     depends_on:
