--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,6 @@ build-backend = "pdm.pep517.api"
 [tool.pdm]
 
 [tool.pdm.scripts]
-dev = "uvicorn app.main:app --reload"
+dev = "uvicorn app.main:app --host 0.0.0.0 --port 8081 --reload"
 start = "uvicorn app.main:app --host 0.0.0.0 --port 8081"
-worker = "rq worker --with-scheduler"
+recv = "python3 -m app.stream_receiver"
