fix: typo in heroku.yml

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,6 @@
 build:
-  api-server: Dockerfile
-  stream-receiver: Dockerfile
+  docker:
+    api-server: Dockerfile
+    stream-receiver: Dockerfile
 run:
   stream-receiver: python3 -m app.stream_receiver
