--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "aiortc>=1.3.2",
     "numpy>=1.21.1",
     "aiohttp>=3.8.3",
+    "gunicorn>=20.1.0",
 ]
 requires-python = ">=3.7"
 license = {text = "MIT"}
